# dao-contracts

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.txt  SETUP.md  build_only.sh  deploy.js  deploy_dao.sh  deploy_eos_mainnet.sh  deploy_eos_testnet.sh  deploy_only.sh  deploy_pangea_mainnet.sh  deploy_pangea_testnet.sh  deploy_telos_mainnet.sh  deploy_telos_testnet.sh  deploy_testnet.sh  dho.txt  fix_cmake_cache.sh  go.mod  go.sum  hydra.yml  jest.config.js  main.go  package.json  setup.sh  tsconfig.json  uncrustify.sh
.config/: uncrustify.config
.github/scripts/: only_collaborators.sh
.github/workflows/: build.yaml  hydra-test.yaml  linter.yaml  test.yaml  workflow.yaml
dao-go/: README.md  assignments_test.go  badges_test.go  dao.go  dao_test.go  decide.go  edit_test.go  environment_test.go  genesis.json  go.mod  go.sum  graph_test.go  helpers_test.go  hvoice.go  hvoice_test.go  migration.go  migration_hvoice_test.go  migration_test.go  migration_util.go  nodeos.sh  object_types.go  payout_test.go  proposal_test.go  proposals.go  roles_test.go  setup.go  setup_test.go  types.go
dao-go/artifacts/comments/: comments.abi  comments.wasm
dao-go/artifacts/escrow/: escrow.abi
dao-go/artifacts/monitor/: monitor.wasm
dao-go/artifacts/seedsexchg/: seedsexchg.abi  seedsexchg.wasm
dao-go/artifacts/token/: token.wasm
dao-go/artifacts/treasury/: treasury.abi  treasury.wasm
dao-go/artifacts/vesting/: vesting.abi  vesting.wasm
dao-go/artifacts/voice/: voice.abi  voice.wasm
dao-go/fixtures/: assignment.json  badge-assignment.json  badge.json  payout.json  proposal-with-old-ballot.json  role.json
dao-go/migrate/: go.mod  go.sum  main.go
dao-go/mocks/seedsexchg/: CMakeLists.txt  README.txt
dao-go/reset/: main.go
documentation/: CONTRIBUTING.md  attestations.md  badge_assignments.md  badges.md  members.md  periods.md  root_node.md  stale_commands.md
include/: assignment.hpp  common.hpp  dao.hpp  hypha_voice.hpp  macros.hpp  member.hpp  migration.hpp  period.hpp  recurring_activity.hpp  settings.hpp  time_share.hpp  trail.hpp  typed_document.hpp  typed_document_factory.hpp  util.hpp  validator.hpp
include/badges/: badges.hpp  common.hpp
include/ballots/: vote.hpp  vote_tally.hpp
include/circles/: circle.hpp
include/comments/: comment.hpp  likeable.hpp  reaction.hpp  section.hpp
include/config/: config.hpp
include/payers/: escrow_payer.hpp  husd_payer.hpp  hvoice_payer.hpp  hypha_payer.hpp  payer.hpp  payer_factory.hpp  peg_payer.hpp  reward_payer.hpp  seeds_payer.hpp  voice_payer.hpp
include/pricing/: billing_info.hpp  common.hpp  features.hpp  plan_manager.hpp  price_offer.hpp  pricing_plan.hpp
include/proposals/: ass_extend_proposal.hpp  assignment_proposal.hpp  attestation_proposal.hpp  badge_assignment_proposal.hpp  badge_proposal.hpp  budget_proposal.hpp  circle_proposal.hpp  circle_suspend_proposal.hpp  edit_proposal.hpp  payout_proposal.hpp  policy_proposal.hpp  poll_proposal.hpp  proposal.hpp  proposal_factory.hpp  quest_completion_proposal.hpp  quest_start_proposal.hpp  role_proposal.hpp  suspend_proposal.hpp
include/reward/: account.hpp
include/treasury/: attestation.hpp  balance.hpp  common.hpp  payment.hpp  redemption.hpp  treasury.hpp
include/upvote_election/: common.hpp  election_group.hpp  election_round.hpp  random_number_generator.hpp  stream.hpp  up_vote_vote.hpp  upvote_election.hpp  vote_group.hpp
include/voice/: account.hpp  currency_stats.hpp
ricardian/: dao.contracts.md
setup/: .env  init.js  package.json
src/: CMakeLists.txt  assignment.cpp  dao.cpp  member.cpp  migration.cpp  period.cpp  recurring_activity.cpp  settings.cpp  time_share.cpp  typed_document.cpp  typed_document_factory.cpp  util.cpp
src/badges/: badges.cpp
src/ballots/: vote.cpp  vote_tally.cpp
src/circles/: circle.cpp
src/comments/: comment.cpp  likeable.cpp  reaction.cpp  section.cpp
src/payers/: escrow_payer.cpp  husd_payer.cpp  hvoice_payer.cpp  hypha_payer.cpp  payer.cpp  payer_factory.cpp  peg_payer.cpp  reward_payer.cpp  seeds_payer.cpp  voice_payer.cpp
src/pricing/: actions.cpp  billing_info.cpp  features.cpp  plan_manager.cpp  price_offer.cpp  pricing_plan.cpp
src/proposals/: ass_extend_proposal.cpp  assignment_proposal.cpp  attestation_proposal.cpp  badge_assignment_proposal.cpp  badge_proposal.cpp  budget_proposal.cpp  circle_proposal.cpp  circle_suspend_proposal.cpp  edit_proposal.cpp  payout_proposal.cpp  policy_proposal.cpp  poll_proposal.cpp  proposal.cpp  proposal_factory.cpp  quest_completion_proposal.cpp  quest_start_proposal.cpp  role_proposal.cpp  suspend_proposal.cpp
src/treasury/: actions.cpp  attestation.cpp  balance.cpp  payment.cpp  redemption.cpp  treasury.cpp
src/upvote_election/: actions.cpp  election_group.cpp  election_round.cpp  up_vote_vote.cpp  upvote_election.cpp  vote_group.cpp
templates/cmake/: CMakeLists.dune.txt  CMakeLists.local.txt  CMakeLists_src.dune.txt  CMakeLists_src.local.txt
templates/config/: development.config.hpp  eos_development.config.hpp  eos_production.config.hpp  production.config.hpp
tests/: DaoBlockchain.ts  assignments.test.ts  badges.test.ts  comments.test.ts  dao.test.ts  hydra.hpp  proposal.test.ts  roles.test.ts  setup.ts  voice.test.ts  voting.test.ts
tests/artifacts/comments/: comments.abi  comments.wasm
tests/artifacts/decide/: decide.wasm
tests/artifacts/escrow/: escrow.wasm
tests/artifacts/monitor/: monitor.abi
tests/artifacts/seedsexchg/: seedsexchg.wasm
tests/artifacts/token/: token.abi
tests/dao/: Dao.ts  DaoBlockchain.ts
tests/sample-data/: AssignmentSamples.ts  BadgeSamples.ts  RoleSamples.ts
tests/types/: Asset.test.ts  Asset.ts  Document.ts  Edge.ts  Member.ts  Periods.ts
tests/utils/: Arrays.ts  Constants.ts  Dao.ts  Date.test.ts  Date.ts  DocumentBuilder.ts  Expect.ts  Parsers.ts  Permissions.ts  Proposal.ts
util/: NOTES.md  README.md  check_config.sh  dune_start_nodeos.sh  dunes_terminal.sh  install_ninja.sh  optimize_wasm.sh  run_make.sh  set_contract.sh
utils/: README.txt  migrate.py
(+6 files in other folders)
